# textual-pomodoro-timer-app

./: .gitignore  .markdownlint.json  LICENSE  README.md  README_JA.md  mypy.ini  pyproject.toml  ruff.toml
docs/: design.drawio
docs/image/: classes.plantuml  packages.plantuml
src/: app.py
src/lib/: settings.py  template.py
src/lib/common/: decorator.py  file.py  log.py  process.py  types.py
src/lib/components/: layout.tcss
src/param/: param.yaml
tests/: pytest_all.sh
tests/lib/common/: test_decorator.py  test_file.py  test_log.py  test_process.py
