[project]
name = "textual-pomodoro-timer-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "plyer>=2.1.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "textual-dev>=1.7.0",
    "textual[syntax]>=3.3.0",
    "tomlkit>=0.13.3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pylint>=3.3.7",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "types-pyyaml>=6.0.12.20250516",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-intl>=2.3.1",
    "sphinx-rtd-theme>=3.0.2",
]
